User fixes and quiz style (#56)
* 5/5 questions correct does not equal 50 points, which is infuriating, goddamn

* fix points

* Fix frontend state

* removed some console.logs, change some styling

* quiz capsule adds to users finishedCapsules, progressbar no longer overflowing

--- a/client/src/pages/profile.css
+++ b/client/src/pages/profile.css
@@ -1,4 +1,4 @@
-.container {
+.profileContainer {
     background-color: #4A8554;
     height: 100vh;
     display: flex;
@@ -27,17 +27,13 @@
     height: 10em;
     width: 10em;
     border-radius: 100px;
+    margin-bottom: 1em;
 }
 
 #icon {
     height: 7em;
     width: 20em;
     color: #333333;
-}
-
-#userLevel {
-    color: white;
-    margin: 0.5em;
 }
 
 #userPoints {
